# FP_QSIM

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
playground/: qiskit101.ipynb  test.ipynb  test.py
src/fp_qsim/: __init__.py  pauli.py
