[project]
name = "fp-qsim"
version = "0.1.0"
description = "fp project"
readme = "README.md"
authors = [
    { name = "bennimaximi", email = "benjamingrasselt@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
